Add enableAlerting route
